[package]
name = "smpp"
version = "0.1.0"
authors = ["Andy Balaam", "The Rust SMPP Developers"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/andybalaam/rust-smpp"
homepage = "https://gitlab.com/andybalaam/rust-smpp"
description = """
SMPP protocol support (client and server).
"""
keywords = ["smpp", "sms", "smsc", "esme"]
categories = ["network-programming", "parser-implementations"]
edition = "2018"
include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md"]

[dependencies]
ascii = "1.0"
async-trait = ">=0.1.42"
bytes = "1"
env_logger = "0.8.*"
futures = { version = "0.3.*" }
lazy_static = "1.4.0"
log = "0.4.*"
num-derive = "0.3"
num-traits = "0.2"
regex = "1"
serde = { version = ">=1.0.118", default-features = false }
tokio = { version = ">=1.0.1", features = ["full"] }

[dev-dependencies]
once_cell = "1.5.*"
